--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
         <module>entity</module>
         <module>app</module>
         <module>repository</module>
+        <module>service</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
