--- a/service/pom.xml
+++ b/service/pom.xml
@@ -43,6 +43,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.edu</groupId>
             <artifactId>repository</artifactId>
             <version>0.0.1-SNAPSHOT</version>
