--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
         <module>app</module>
         <module>repository</module>
         <module>service</module>
+        <module>controller</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
